# ChangeLog for app-emulation/emul-linux-x86-baselibs
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.53 2006/07/20 14:32:19 blubb Exp $

  20 Jul 2006; Simon Stelling <blubb@gentoo.org>
  -emul-linux-x86-baselibs-2.4.2.ebuild,
  -emul-linux-x86-baselibs-2.5.ebuild:
  removing vulnerable versions

  05 Jul 2006; Simon Stelling <blubb@gentoo.org>
  emul-linux-x86-baselibs-2.5.1.ebuild:
  marked stable on amd64 wrt bug 138672

*emul-linux-x86-baselibs-2.5.1 (01 Jul 2006)

  01 Jul 2006; Simon Stelling <blubb@gentoo.org>
  +emul-linux-x86-baselibs-2.5.1.ebuild:
  version bump to update libpng per bug 138672

*emul-linux-x86-baselibs-2.5 (17 Mar 2006)

  17 Mar 2006; Herbie Hopkins <herbs@gentoo.org>
  -emul-linux-x86-baselibs-2.4.1.ebuild,
  +emul-linux-x86-baselibs-2.5.ebuild:
  Bump versions of glib and dbus, add libart_lgpl and libidn.

  15 Mar 2006; Herbie Hopkins <herbs@gentoo.org>
  emul-linux-x86-baselibs-2.4.2.ebuild:
  Stable on amd64.

  09 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  emul-linux-x86-baselibs-2.4.1.ebuild,
  emul-linux-x86-baselibs-2.4.2.ebuild:
  Use nostrip instead of strip restriction for compatibility with older portage.

  09 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  emul-linux-x86-baselibs-2.4.1.ebuild,
  emul-linux-x86-baselibs-2.4.2.ebuild:
  Add strip restriction, as the binaries are already stripped.

  03 Mar 2006; Simon Stelling <blubb@gentoo.org>
  emul-linux-x86-baselibs-2.4.1.ebuild,
  emul-linux-x86-baselibs-2.4.2.ebuild:
  remove the dependency on app-emulation/emul-linux-x86-glibc since 2004.3 has
  been deprecated a while ago

*emul-linux-x86-baselibs-2.4.2 (11 Jan 2006)

  11 Jan 2006; Herbie Hopkins <herbs@gentoo.org>
  -emul-linux-x86-baselibs-2.3.ebuild, -emul-linux-x86-baselibs-2.4.ebuild,
  +emul-linux-x86-baselibs-2.4.2.ebuild: