@@ -3,14 +3,19 @@ MD5 3ac141b3a5850345c246b5c4ce924ccc files/75emul-linux-x86-base 51
 RMD160 1c52b6d125a8ee61fb909a085a8c935096e2bcb4 files/75emul-linux-x86-base 51
 SHA256 6d5b1311705d20d551fd993fcacef7237e818dcb39a757e00a0943c0a4b4dc24 files/75emul-linux-x86-base 51
 DIST emul-linux-x86-baselibs-2.5.1.tar.bz2 4992737 RMD160 2631aa686d874c9d3fdf65245bc3bab849527fe7 SHA1 46307497057eea66c60ab3f317736939f4af710a SHA256 636876594091a8beb2531ba5834ae83f6e6fc8c39a2a43806b82c63e5927a288
+DIST emul-linux-x86-baselibs-2.5.2.tar.bz2 5588388 RMD160 e765243320ad9b3b36aa642a0d3db89efbccbe63 SHA1 ea121156676c10d0f9ccb82961bf7404f6746326 SHA256 4899db3a780494dd293ee1bbfab9d5a0f7313c2d055c4900bb0d205e071e4322
 EBUILD emul-linux-x86-baselibs-2.5.1.ebuild 693 RMD160 79a14cb1f5dbc6f0aedb07f0c03964276382ae17 SHA1 ebf94bba568bcee7a90a3b399b5e2a2fb5ae6cc0 SHA256 c4539b1dd968c0e748364ef2b2c1e5729ba65b564e3ce58a2af300dc59c4f9da
 MD5 9a4f8be0444e048e6b7306d6e846a738 emul-linux-x86-baselibs-2.5.1.ebuild 693
 RMD160 79a14cb1f5dbc6f0aedb07f0c03964276382ae17 emul-linux-x86-baselibs-2.5.1.ebuild 693
 SHA256 c4539b1dd968c0e748364ef2b2c1e5729ba65b564e3ce58a2af300dc59c4f9da emul-linux-x86-baselibs-2.5.1.ebuild 693
-MISC ChangeLog 9522 RMD160 ec527a10749aed7b4a971a1c290ad41a0d22385e SHA1 9181bf3af3cf938141865d6fe7572fcaaf3a87ab SHA256 c8a630e8eb82fff429daf2d6382bb98be1d548899f34a080f319e1a57e8b11d2
-MD5 4a608053cdeb8939f1009c3cd7a7b168 ChangeLog 9522
-RMD160 ec527a10749aed7b4a971a1c290ad41a0d22385e ChangeLog 9522
-SHA256 c8a630e8eb82fff429daf2d6382bb98be1d548899f34a080f319e1a57e8b11d2 ChangeLog 9522
+EBUILD emul-linux-x86-baselibs-2.5.2.ebuild 679 RMD160 333e3abf834c9c0d8a37f07282e2932c7ff474e5 SHA1 5394c90f467b718eb2550d50c820c858a283b923 SHA256 8c242c2a68475a1aff2c680f5b88623d6478df11260d998935e96a943dfc78ac
+MD5 4b4e5fbd3abcbd0a1a74412b754af179 emul-linux-x86-baselibs-2.5.2.ebuild 679
+RMD160 333e3abf834c9c0d8a37f07282e2932c7ff474e5 emul-linux-x86-baselibs-2.5.2.ebuild 679
+SHA256 8c242c2a68475a1aff2c680f5b88623d6478df11260d998935e96a943dfc78ac emul-linux-x86-baselibs-2.5.2.ebuild 679
+MISC ChangeLog 9691 RMD160 0f9002badf8c7e08e056a12c993566603a0b346c SHA1 027bdac9b9a40181a23665b324d74d05974b92f5 SHA256 5551836c2d6017e153779ba46f972e3d3386896c3bf4ff82736c678c7ab2df24
+MD5 d3f35dadbc137a5cf6dbf60171aa9c66 ChangeLog 9691
+RMD160 0f9002badf8c7e08e056a12c993566603a0b346c ChangeLog 9691
+SHA256 5551836c2d6017e153779ba46f972e3d3386896c3bf4ff82736c678c7ab2df24 ChangeLog 9691
 MISC metadata.xml 290 RMD160 29c2eafcf00e4b115ba5ae455218ee6eebda67ae SHA1 281918720fd1d692578d6419193b1027a1014b6a SHA256 8f04703141bc8cd55a0e56bf7593f657a891ed4796e71e3d6e8770c7ea098c30
 MD5 5e8c61d551dad88488a66992865ba737 metadata.xml 290
 RMD160 29c2eafcf00e4b115ba5ae455218ee6eebda67ae metadata.xml 290
@@ -18,3 +23,6 @@ SHA256 8f04703141bc8cd55a0e56bf7593f657a891ed4796e71e3d6e8770c7ea098c30 metadata
 MD5 ef0336e032b994d49b12ec120d36a9bc files/digest-emul-linux-x86-baselibs-2.5.1 295
 RMD160 12f07fcdfb0d170a21e0b4447d8a4ed57b93a59f files/digest-emul-linux-x86-baselibs-2.5.1 295
 SHA256 a9329090c9886142f507466f9bc64a16668abcdcb2d36ac04412e0c30aaf5ad6 files/digest-emul-linux-x86-baselibs-2.5.1 295
+MD5 0f928883ef42c4494748f2ec167509a1 files/digest-emul-linux-x86-baselibs-2.5.2 295
+RMD160 20266e56e7562c0df09832e0d85a39b46f8a709a files/digest-emul-linux-x86-baselibs-2.5.2 295
+SHA256 c16204a8de206998a9b8dee1742878e358eaf549540892636baf9a79305b60f9 files/digest-emul-linux-x86-baselibs-2.5.2 295
