@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/emul-linux-x86-baselibs
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.53 2006/07/20 14:32:19 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.54 2006/09/06 18:31:57 blubb Exp $
+
+*emul-linux-x86-baselibs-2.5.2 (06 Sep 2006)
+
+  06 Sep 2006; <blubb@gentoo.org> +emul-linux-x86-baselibs-2.5.2.ebuild:
+  version bump directly to stable wrt bug 146438
 
   20 Jul 2006; Simon Stelling <blubb@gentoo.org>
   -emul-linux-x86-baselibs-2.4.2.ebuild,
